# play_auth

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
