[package]
name = "play_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.1"
env_logger = "0.11.5"
# log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "play_auth"

[dev-dependencies]
reqwest = "0.12.9"
dotenv = "0.15"
